--- a/TODO.txt
+++ b/TODO.txt
@@ -11,6 +11,7 @@
 - Make left shift force upgrade instead of showing the dialog
 - More music
 - Consider: should fire and ice deal more damage?
+- Hue shift enemies
 
 IDEAS:
 - Resources can be obtained through mining/drilling in order to build/upgrade towers
