--- a/TODO.txt
+++ b/TODO.txt
@@ -7,11 +7,14 @@
 - Implement endless mode (DONE)
 - In competitive modes, allow players to send enemies to the other side (even during cooldown periods) and decrease the endless mode impact on the game slightly
 
-- Allow other menus to be clicked in middle click tower
-- Make left shift force upgrade instead of showing the dialog
+- Allow other menus to be clicked in middle click tower (DONE)
+- Make left shift force upgrade instead of showing the dialog (DONE)
+- Make left shift force insert component instead of showing the dialog
 - More music
 - Consider: should fire and ice deal more damage?
 - Hue shift enemies
+- FIX: Find out why story levels aren't copied to the user folder when it is packaged into a jar or EXE
+- Improve shop layout (ADD TABS)
 
 IDEAS:
 - Resources can be obtained through mining/drilling in order to build/upgrade towers
