--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,6 @@
 ORDERED TODO LIST:
 - Create a "Game Over" screen for multiplayer and singleplayer modes (don't further support players playing past the game's end)
+  - Implement a score system as well
 - Create tabs for shop menu to separate combative towers, mining towers, and effect towers
 - Add new tiles to prepare for mining towers to be implemented
   - Add ore veins (IRON, TITANIUM, URANIUM, ETC) for the material miner
@@ -17,6 +18,7 @@ ORDERED TODO LIST:
   - Ruby inflicts flame debuffs on enemies
 - (Optionally) Create effect towers (similar to beacons in factorio)
   - Distributor that applies a fraction of a gemstone's power to towers in range
+  - Magnetic Tower that increases the likelihood of an enemy dropping a component when killed within range
   - Other towers that increase tower stats
 - Create worlds instead of levels
   - Replace the current level selector with a system like Infinitode 2, New Super Mario Bros U, etc.
