--- a/TODO.txt
+++ b/TODO.txt
@@ -9,13 +9,13 @@ ORDERED TODO LIST:
   - component escavator that discovers more burried components
   ✓ gemstone miner that uncovers gemstones (only one gemstone can be applied to a building and provides special abilities and perks)
   ✓ material miner that produces metals (DEPENDING ON WHERE THEY'RE PLACED) like steel, which can be used to construct/upgrade special towers
-- Add gemstone functionality
-  - Diamonds adds piercing to towers
-  - Cryonite inflicts slowness debuffs on enemies that are hit by it
-  - Quartz increases range of buildings
-  - Topaz halves attack speed, but doubles range and damage
-  - Thorium halves damage, but doubles attack speed and AOE
-  - Ruby has a chance to double the damage of towers (crit chance)
+✓ Add gemstone functionality
+  ✓ Diamonds adds piercing to towers
+  ✓ Cryonite inflicts slowness debuffs on enemies that are hit by it
+  ✓ Quartz increases range of buildings
+  ✓ Topaz halves attack speed, but doubles range and damage
+  ✓ Thorium halves damage, but doubles attack speed and AOE
+  ✓ Ruby has a chance to double the damage of towers (crit chance)
 - (Optionally) Create effect towers (similar to beacons in factorio)
   - Distributor that applies a fraction of a gemstone's power to towers in range
   - Magnetic Tower that increases the likelihood of an enemy dropping a component when killed within range
