--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,4 @@
-SCRAP ISNT UPDATED IN INVENTORY
+SCRAP ISNT UPDATED IN INVENTORY !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 DONT ALLOW PEOPLE TO PRESS THE UPGRADE BUTTON WHEN THE TOWER IS UPGRADING
 
 ORDERED TODO LIST:
@@ -26,8 +26,11 @@ ORDERED TODO LIST:
 - Create worlds instead of levels
   ✓ Replace the current level selector with a system like Infinitode 2, New Super Mario Bros U, etc.
   - Players must complete either X amounts of waves if the level is endless OR finish the predefined waves to move on
-  - In the menu, have a button that allows you to toggle between "Online" and "Singleplayer"
+  ✓ In the menu, have a button that allows you to toggle between "Online" and "Singleplayer"
+  - Add prerequisites to play more levels
+  - Store the last viewed world and select that whenever the game loads (i.e. if the world when the game was exited was story, re-open the story world)
   - Create a story world for the base game ALONG WITH a competitive world for multiplayer
+  - Add a medal to the far right side of the tasks label (inline with the tasks label) for when everything task for that quest has been completed for that questfile
 - Make ~5 good base game levels (try not to do endless) and ~2 player levels
 - Create a tutorial button in the play menu for new players
 - Add a bestiary for players to learn more about the enemies they encounter 
