--- a/TODO.txt
+++ b/TODO.txt
@@ -29,7 +29,7 @@ ORDERED TODO LIST:
   ✓ Store the last viewed world and select that whenever the game loads (i.e. if the world when the game was exited was story, re-open the story world)
   ✓ Create a campaign world for the base game ALONG WITH a competitive world for multiplayer
   ✓ Add a medal to the far right side of the tasks label (inline with the tasks label) for when everything task for that quest has been completed for that questfile
-- Make ~5 good base game levels (try not to do endless) and ~2 player levels
+- Make ~5 good base game levels (try not to do endless) and ~2 multiplayer levels
 ✓ Create a tutorial button in the play menu for new players
 - Add a bestiary for players to learn more about the enemies they encounter 
   - Keep it simple to understand with a lot of icons to signify immunities, health, money on death, other effects
@@ -61,6 +61,7 @@ ORDERED TODO LIST:
   Instead of having a level selector, create a world where levels can be selected (similar to the diner dash worlds or new super mario bros u).
   To progress in the world, you must either complete the predefined waves in a non-endless level OR get to a certain level in endless mode
 }
+- TOWER IDEA: Gas cloud emitter??? 
 
 IDEAS:
 - Resources can be obtained through mining/drilling in order to build/upgrade towers
