--- a/TODO.txt
+++ b/TODO.txt
@@ -4,10 +4,10 @@
   ✓ gemstone miner that uncovers gemstones (only one gemstone can be applied to a building and provides special abilities and perks)
   ✓ material miner that produces metals (DEPENDING ON WHERE THEY'RE PLACED) like steel, which can be used to construct/upgrade special towers
 
-- Finish Campaign / 1.3
+✓ Finish Campaign / 1.3
 - Add achievements to the game (MAKE SURE THEY'RE UNIQUE AND NOT SOLELY USED TO INCREASE GAME TIME)
-  - Add an achievement complete notification that appears at the top of the screen. (make it work in any menu)
-  - Add an achievement window in the main menu (overlay a checkmark over the icon of the achievement if it is completed)
+  ✓ Add an achievement complete notification that appears at the top of the screen. (make it work in any menu)
+  ✓ Add an achievement window in the main menu (overlay a checkmark over the icon of the achievement if it is completed)
 - Add a way to display if a tower is an enemy tower
 
 1.1 TODO LIST:
