--- a/TODO.txt
+++ b/TODO.txt
@@ -1,16 +1,18 @@
-1.0 TODO LIST: 
+1.1 TODO LIST: 
 - Create some mining towers and have them add items to team inventories
   - component escavator that discovers more burried components
   ✓ gemstone miner that uncovers gemstones (only one gemstone can be applied to a building and provides special abilities and perks)
   ✓ material miner that produces metals (DEPENDING ON WHERE THEY'RE PLACED) like steel, which can be used to construct/upgrade special towers
 
 ✓ Finish Campaign / 1.3
-- Add achievements to the game (MAKE SURE THEY'RE UNIQUE AND NOT SOLELY USED TO INCREASE GAME TIME)
+✓ Add achievements to the game (MAKE SURE THEY'RE UNIQUE AND NOT SOLELY USED TO INCREASE GAME TIME)
   ✓ Add an achievement complete notification that appears at the top of the screen. (make it work in any menu)
   ✓ Add an achievement window in the main menu (overlay a checkmark over the icon of the achievement if it is completed)
-- Add a way to display if a tower is an enemy tower
+✓ Add a way to display if a tower is an enemy tower
 
-1.1 TODO LIST:
+- Polish
+
+1.2 TODO LIST:
 - Bestiary
   - Keep it simple to understand with a lot of icons to signify immunities, health, money on death, other effects
   - A short description
