--- a/TODO.txt
+++ b/TODO.txt
@@ -13,12 +13,13 @@
   ✓ show how many people are on a team in team selector
   ✓ Minimize tutorial text (it is overexplaining everything)
   - Keybind change screen
-  - Critical hit particle effect (+ sound)
+  ✓- Critical hit particle effect (+ sound)
   - Reduce particle effects when many are on the screen at once
   - Balance mining tower speeds/timings and upgrade costs
-  - Balance the Ice Tower slowdown
+  ✓ Balance the Ice Tower slowdown
   - Find out why the ice tower description icon won't display (it has something to do with the createCustomSection function I believe)
   - First time playing set username screen
+  - When going from a wave with a bunch of enemies to barely any enemies, a bunch of components get added because the chance increases with less enemies.
 
   Feedback:
   - a lot of moving between windows (try to make windows less intrusive)
