Added test version display to title screen, updated TODO

--- a/TODO.txt
+++ b/TODO.txt
@@ -21,10 +21,19 @@
   - Make 1.3 easier
   - Reduce particle effects when many are on the screen at once
   - maxwell wears something funny ig
-  - felipe monicle
+  - felipe monicle 
+  - Finish/improve/expand song 3
 
   Feedback:
   - a lot of moving between windows (try to make windows less intrusive)
+
+- Getting it out there
+  - Get others to try it out (maybe noblelemon, post stuff in libgdx discord, have friends test)
+    - Create something (google form probably) that allows me to get structured feedback from people about the game 
+    - Create an information log that gets sent to me through api calls with debug information/playtest information perhaps?
+    - Add a report/suggest feature into the game? maybe make it go through api.coltenreissmann.me
+  - Make a simple trailer: grab attention at the beginning, showcase the music and gameplay, end with call to action.
+  - Post teasers and short clips. Maybe make some devlog videos
 
 1.2 TODO LIST:
 - Bestiary
