--- a/TODO.txt
+++ b/TODO.txt
@@ -13,12 +13,14 @@
   ✓ Balance mining tower speeds/timings and upgrade costs
   ✓ Balance the Ice Tower slowdown
   ✓ Find out why the ice tower description icon won't display (it has something to do with the createCustomSection function I believe) 
-  - "First time playing, set username" screen
+  ✓ "First time playing, set username" screen
   - Keybind change screen (PC only)
   - Critical hit sound effect 
+  - High Level Tower achievement doesn't get awarded despite having a tower higher than level 8
+  - Show disconnect reason when kicked from online game
   - When going from a wave with a bunch of enemies to barely any enemies, a bunch of components get added because the chance increases with less enemies.
   - team order is not ordering correctly
-  - Make 1.3 easier
+  - Make 1.3 easier (just slightly. wave 7/8 is very hard, so decrease the amount of enemies spawned then, or make the wave longer)
   - Reduce particle effects when many are on the screen at once
   - maxwell wears something funny ig
   - felipe monicle 
@@ -58,6 +60,11 @@
 - User-friendly editor
 - Stock Market Tower!!!!
 - mining for money
+- When playing a campaign level for the first time, display the new towers that are available to use.
+  - Create an animation that grays out the screen and displays the new towers in the middle (like the infininode tutorial)
+  - Put the tower's description underneath
+  - After pressing continue, have the images shrink and move towards the shop icon
+- Re-implement passwords to enter online games
 - New Tower: Sniper Tower (large damage, slow attack speed. past a certain level (or maybe with quartz applied), you should unlock the ability to target specific enemies with this tower).
 - Add a maximum towers setting in WavesData (for multiplayer and map making)
 - Create uses for surplus gemstones
