--- a/TODO.txt
+++ b/TODO.txt
@@ -14,13 +14,15 @@
   ✓ Balance the Ice Tower slowdown
   ✓ Find out why the ice tower description icon won't display (it has something to do with the createCustomSection function I believe) 
   ✓ "First time playing, set username" screen
-  - Keybind change screen (PC only)
-  - Critical hit sound effect 
-  - High Level Tower achievement doesn't get awarded despite having a tower higher than level 8
+  ✓ Keybind change screen (PC only)
+  ✓ High Level Tower achievement doesn't get awarded despite having a tower higher than level 8
   - Show disconnect reason when kicked from online game
   - When going from a wave with a bunch of enemies to barely any enemies, a bunch of components get added because the chance increases with less enemies.
   - team order is not ordering correctly
-  - Make 1.3 easier (just slightly. wave 7/8 is very hard, so decrease the amount of enemies spawned then, or make the wave longer)
+  ✓ Make 1.3 easier (just slightly. wave 7/8 is very hard, so decrease the amount of enemies spawned then, or make the wave longer)
+  - Critical hit sound effect 
+  - Add the volume sliders to the first time joining screen for "calibration"
+  - Make range increase slower than it does now (square root of level maybe? logarithmic?)
   - Reduce particle effects when many are on the screen at once
   - maxwell wears something funny ig
   - felipe monicle 
@@ -51,7 +53,7 @@
   - Make a money system outside of inside of a level (like geobits!!!!) that are granted for completing achievements and playing levels
   - Allow them to color their avatar (use the custom shader to do this)
   - Accessories shop
-  - Custom nametag colors
+  - Custom nametag colors/effects
 - Create a compact version of the shop (toggleable in the settings. it should be just icons and tabs, similar to necesse inventory?)
 - New competitive mode: Offensive
   // All combative and mining towers are the same. Players will have access to an attacking window, 
@@ -68,6 +70,10 @@
 - New Tower: Sniper Tower (large damage, slow attack speed. past a certain level (or maybe with quartz applied), you should unlock the ability to target specific enemies with this tower).
 - Add a maximum towers setting in WavesData (for multiplayer and map making)
 - Create uses for surplus gemstones
+- In-game chat/message log
+- Make the title screen more interactive and nice to look at
+  - Make the background interesting. Video background? Image slideshow? Factorio-like live background?
+  - Create main menu music 
 
 
 Materials Reference:
