Added functionality to the effects menu, reworked some elements of the shop, created the framework for splash entities (must be further tested and worked upon)

--- a/TODO.txt
+++ b/TODO.txt
@@ -33,6 +33,8 @@
   ✓ Fire tower and Ice tower sprites
     ✓ Create new sprites for them
 
+  - Make ONE AOE effect
+    - There should not be a separate/bottle entity. Only one entity, which displays the bottle and where it was thrown from
 
   Feedback:
   - a lot of moving between windows (try to make windows less intrusive)
