Created blindness potion and related classes

--- a/TODO.txt
+++ b/TODO.txt
@@ -35,6 +35,10 @@
 
   - Make ONE AOE effect
     - There should not be a separate/bottle entity. Only one entity, which displays the bottle and where it was thrown from
+    - Create particle effect around potions
+    - DIsplay splash radius when placing
+
+  - box sprite does not appear ever???
 
   Feedback:
   - a lot of moving between windows (try to make windows less intrusive)
