Added potion particles, added splash throw and land SFX, added functionality to blindness splash

--- a/TODO.txt
+++ b/TODO.txt
@@ -33,11 +33,10 @@
   ✓ Fire tower and Ice tower sprites
     ✓ Create new sprites for them
 
-  - Make ONE AOE effect
-    - There should not be a separate/bottle entity. Only one entity, which displays the bottle and where it was thrown from
-    - Create particle effect around potions
+  ✓ Make ONE AOE effect
+    ✓ There should not be a separate/bottle entity. Only one entity, which displays the bottle and where it was thrown from
+    ✓ Create particle effect around potions
     - DIsplay splash radius when placing
-
   - box sprite does not appear ever???
 
   Feedback:
